# steel-defect-detection

./: PROJECT-DETAIL.md  README.md  dockerfile  dockerfile-serverless  pyproject.toml
data/: train_bboxes.csv
gcp/: app.py  deploy-cloud-run.bat  requirements.txt
notebooks/: stage1-binary-classification-e1-1.ipynb  stage1-binary-classification-e1-10.ipynb  stage1-binary-classification-e1-11.ipynb  stage1-binary-classification-e1-12.ipynb  stage1-binary-classification-e1-13.ipynb  stage1-binary-classification-e1-14.ipynb  stage1-binary-classification-e1-15.ipynb  stage1-binary-classification-e1-15b.ipynb  stage1-binary-classification-e1-15c.ipynb  stage1-binary-classification-e1-2.ipynb  stage1-binary-classification-e1-3.ipynb  stage1-binary-classification-e1-4.ipynb  stage1-binary-classification-e1-5.ipynb  stage1-binary-classification-e1-6.ipynb  stage1-binary-classification-e1-7.ipynb  stage1-binary-classification-e1-8.ipynb  stage1-binary-classification-e1-9.ipynb  steel-defect-detection-eda-01.ipynb  steel-defect-detection-eda-02.ipynb  steel-defect-detection-eda-03.ipynb
src/: client-gcp.py  client-serverless.py  client.py  common_utils.py  config.py  data_utils.py  lambda_function.py  plot_utils.py  predict.py  streamlit-app.py  train.py  train_utils.py
